<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/user_list_layout"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="5sp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
...
